[package]
name = "url-decompose"
description = "Decompose an url into parts"
version = "0.1.1"
authors = ["gly <gabin.lefranc@gmail.com>"]
edition = "2018"
repository = "https://github.com/glcraft/url-decompose"
license = "MIT"
keywords = ["url","parser","decode","decompose"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.5.3"
const_format = "0.2.14"
lazy_static = "1.4.0"
